--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -19,6 +19,9 @@ dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
+    //EasyOpenCV setup - Lucian
+    implementation 'org.openftc:easyopencv:1.5.1'
+
     //Road Runner setup - Lucian
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.acmerobotics.roadrunner:core:0.5.4'
